# vision

./: CMakeLists.txt  README.md  main.cpp  main.hpp
example/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt  debug_render.cpp  minimal.cpp  path_tracer.cpp
gui/: CMakeLists.txt  address_bar.cpp  address_bar.hpp  auto_complete_engine.cpp  auto_complete_engine.hpp  auto_complete_engine_tests.cpp  central_widget.cpp  central_widget.hpp  command_stream.cpp  command_stream.hpp  connection.hpp  connection_view_proxy.cpp  connection_view_proxy.hpp  content_view.cpp  content_view.hpp  controller.cpp  controller.hpp  debug_connection.cpp  debug_connection.hpp  debug_input.cpp  debug_input.hpp  debug_render.cpp  debug_render.hpp  fake_controller.cpp  fake_controller.hpp  id_generator.hpp  input.hpp  lexer.cpp  lexer.hpp  lexer_tests.cpp  main.cpp  monitor.cpp  monitor.hpp  page.cpp  page.hpp  process_view.cpp  process_view.hpp  render_request.hpp  resize_request.hpp  resources.qrc  (+19 more)
gui/shaders/: blit_partition.frag  blit_partition.vert
proto/: CMakeLists.txt
proto/debug/: CMakeLists.txt  exec_file.cpp
proto/include/vision/: assign_stmt.hpp  call_expr.hpp  empty_stmt.hpp  exception.hpp  expr.hpp  expr_stmt.hpp  expr_visitor.hpp  int_expr.hpp  interpreter.hpp  lexer.hpp  line_buffer.hpp  parser.hpp  safe_string_view.hpp  server.hpp  stmt.hpp  stmt_visitor.hpp  token.hpp  type_constructor.hpp  type_id.hpp
proto/src/: exception.cpp  interpreter.cpp  lexer.cpp  line_buffer.cpp  parser.cpp  server.cpp  token.cpp
proto/tests/: CMakeLists.txt  interpreter_tests.cpp  lexer_tests.cpp  line_buffer_tests.cpp  parser_tests.cpp
server/: CMakeLists.txt
server/include/vision/: server.hpp  server_observer.hpp
server/src/: server.cpp
tests/: CMakeLists.txt
